# XJTLU_ICS

./: .gitignore  README.md
BASH_LN/: 01.sh  02.sh  array.sh  cal.sh  echo.sh  failed.py  failed2.py  flowControl.sh  function.sh  re.sh  redirect.sh  test.sh
CAN201/01Lects/: Lect3.org  Lect5.org  Lect8.org  NetworkLayer.org  fontconfig-local.conf  lect1.norg  lect1.org  lect2.org  lect4.org  lect6.org  lect7.org  lect8.org  pandoc-header.tex  render_notes.zsh
CAN201/ASS1/: TEST_README.md  TODO.md  client_lix.py  server.py  test.py  test_lhx.py  test_usage_example.md
CAN201/CW2/: README.md  TESTING_GUIDE.md  client.py  networkTopo.py  run_tests.sh  ryu_forward.py  ryu_redirect.py  server.py  test_redirect_delay.sh
CAN201/SOCKET/: TODO.md
CAN201/SOCKET/TcpClient/: CMakeLists.txt
CAN201/SOCKET/TcpClient/src/: main.cc
CAN201/SOCKET/TcpServer/: CMakeLists.txt
CAN201/SOCKET/TcpServer/src/: main.cc
CPT101/: .gitignore
CPT101/note/: 01CHAR.norg  02CHAR.norg  03CHAR.norg  04CHAR.norg  05CHAR.norg  06CHAR.norg  07CHAR.norg  08CHAR.norg  09CHAR.norg  10CHAR.norg  11CHAR.norg  12CHAR.norg  index.norg
CPT101/papers/: 21-22_Final.norg  21-22_Final.txt  21-22_Resit.norg  21-22_Resit.txt  22-24_Boss_overall.norg  22-24_Boss_overall.txt
CPT102/: .gitignore  README.md
CPT102/lect/: EX.norg  index.norg  lect02.norg  lect03.norg  lect04.norg  lect05.norg  lect06.norg  lect0789.norg  lect10.norg  lect11.norg  lect12.norg  lect13_14.norg  lect15.norg  lect16.norg
CPT102/papers/: all.txt  fixes.txt  retry.txt  todo.txt
CPT102/revisionQA/: whatever.txt
CPT103/notes/: mysql.norg
CPT103/papers/: 22-23_Final.norg  22-23_Resit.norg  23-24_Final.norg  23-24_Final_2.norg  23-24_resit.norg  allModuleBuilding.norg  alltablequrey.norg  allthe3nf.norg  shits.norg
CPT103/sql_grammar/: ACID.sql  Database.sql  alterTrain.sql  auto_increment.sql  cpTable.sql  createExampleTable.sql  createTables.sql  database_use.sql  datatypes.sql  deleteData.sql  duplicatedData.sql  functions.sql  functionsDate.sql  functionsMath.sql  groupData.sql  indexExampleTable.sql  indexTrain.sql  insertData.sql  joinExampleTable.sql  joinTable.sql  likeType.sql  metadataTrain.sql  nullExampleTable.sql  nullHandling.sql  orderbyQuery.sql  output.sql  queryData.sql  regexTable.sql  regexTrain.sql  tempTableTrain.sql  unionQuery.sql  updateData.sql
CPT104/: README.md  lect01.norg  lect02.norg  lect03.norg  lect04.norg  lect05.norg  lect06.norg  lect07.norg  lect08.norg  lect09.norg  lect10.norg  lect11.norg  lect12.norg
CPT104/papers/: 22F.txt  22R.txt  23F.txt  23R.txt  todo.norg
CPT202/SwiftTask/: .lazy.lua  pom.xml  tutorial.md
CPT203/01lects/: 1WL1.norg  1WL1.org  2W.org  SystemModling.org
CPT204/ARQueue/: pom.xml
CPT204/Arrays/: main.org
CPT204/BinarySearchTree/: .clang-format  CMakeLists.txt
CPT204/BinarySearchTree/src/: main.cc
CPT204/Heap/: .gitignore  CMakeLists.txt
CPT204/OOPThinking/: main.org
CPT204/paper/: HowToFuckTheELib.sh
CPT204/template/: .lazy.lua
CPT205/: ModelHandBook.md
CPT205/01Lects/: 01Lect.norg  01Lect.org  02Lect.norg  03Lect.org  04_ViewAndProjection.org  index.org
CPT205/04_Math_Impl/Utils/: CMakeLists.txt
CPT205/04_Math_Impl/Utils/include/: Polygon.hpp  Quad.hpp  Text.hpp  Triangle.hpp
CPT205/04_Math_Impl/Utils/include/basic/: Color.hpp  Pos.hpp  Vector.hpp
CPT205/04_Math_Impl/Utils/include/utils/: clamp.hpp
CPT205/04_Math_Impl/Utils/src/: main.cc
CPT205/Assignment/ASS_COPY/: CMakeLists.txt
CPT205/Assignment/ASS_COPY/src/: main.cpp
CPT205/CW2/br/: .clangd  CMakeLists.txt
CPT205/CW2/br/src/: City.cpp  Dam.cpp  IntegratedCity.cpp  Mesa.cpp  Spinner.cpp  Stella.cpp  Vegas.cpp  main_LAPD.cpp
CPT205/CW2/br/textures/: README.txt
CPT205/CW2/br2077_city/: CMakeLists.txt  README.md  designes.md
CPT205/CW2/br2077_city/src/: City.cpp  Dam.cpp  Mesa.cpp  Spinner.cpp  Stella.cpp  Vegas.cpp  main_LAPD.cpp
CPT208/: .gitignore  README.md  exam.requirement.org  mindmap
CPT208/01_DiscoveringRequirements/: DiscoveringRequirements.org  InteractionDesign.org  main.org  main.zh.org
CPT208/02_Prototyping/: README.md  main.org
CPT208/03_ConceptualPrototypingAndPracticalGuide/: main.org
CPT208/04_HeuristicEvaluationQuestionnairAndInterview/: HeuristicEvaluation.org  QuestionnairInterview.org
CPT208/05_PrototypingFidelity/: main.org
CPT208/09_UsabilityTesting&ExperimentDesign/: main.org
CPT208/10_InterfacesAndReserachCOnsiderations/: main.org
CPT208/11_FieldStudyAndAnalytics/: main.org
CPT208/cheatsheet/: build-two-sided-candidate.sh
CPT208/paper/: 2022-2023F.org  2022-2023R.org  2023-2024F.org  2023-2024R.org  2024-2025F.org  2024-2025R.org  readme.md
INT102/: .gitignore  README.md  huffman.py  huffman_cus.py
INT102/00_intro/: sudo.norg
INT102/10week/: lect1.norg
INT102/11week/: lect1.norg
INT102/1week/: compare_shit.lua  note.md  (+1 more)
INT102/7week/HorspoolCPP/: CMakeLists.txt  compile_commands.json
INT102/7week/HorspoolCPP/src/: main.cc
INT102/7week/cpp/: CMakeLists.txt
INT102/7week/cpp/include/: bubble_sort.h  counting_sort.h  insertion_sort.h  merge_sort.h  simple_swap.h
INT102/7week/cpp/src/: bubble_sort.cc  counting_sort.cc  insertion_sort.cc  main.cc  merge_sort.cc  simple_swap.cc
INT102/torture2/ques4/: CMakeLists.txt  compile_commands.json
INT102/torture2/ques4/include/: localOptimal.hpp
INT102/torture2/ques4/src/: localOptimal.cc  main.cc
INT104/: .gitignore  README.md
INT202/: .gitignore  Lecture11_12_Exam_Predictions.org  pandoc-pdf-style.tex
RUST_LN/: .lazy.lua  Readme.md  index.org
TS_LN/: 01_features.js  01_features.ts
(+526 files in other folders)
